--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
-<p> what is going on.</p>
-<p> Anthony failed. </p>
-<p> say hi!</p>
+<DOCTYPE html>
+
+<head>
+    <meta charset="utf-8" />
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+    <title>Charles Goodwin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="css/text" href = "main.css">
+</head>
+
+<body>
+    <p> what is going on.</p>
+    <p> Anthony failed. </p>
+    <p> say hi!</p>
+</body>
