--- a/index.html
+++ b/index.html
@@ -9,7 +9,5 @@
 </head>
 
 <body>
-    <p> what is going on.</p>
-    <p> Anthony failed. </p>
-    <p> say hi!</p>
+    <p> what is going on?</p>
 </body>
