still trying to get google password working

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="google-site-verification" content="eM8MbkZTjCqIsgL5jYBMT_EHcfIWCsu1wsEJrUNusxw" />
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <title>Charles Goodwin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
